[tool.poetry]
name = "sjc_trips"
version = "0.1.0"
description = ""
authors = ["Dustin Carlino <dabreegster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
